[tool.poetry]
name = "mlm"
version = "0.1.0"
description = "Meta-Learning in Metric Spaces"
authors = ["fontaine618"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
pandas = "^3.0.1"
numpy = "^2.4.3"
torch = "^2.10.0"
matplotlib = "^3.10.8"


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
